--- a/parallel-workflow/2_upsc_essay_eval_workflow.ipynb
+++ b/parallel-workflow/2_upsc_essay_eval_workflow.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 103,
    "id": "9a39c844",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"feedback\": \"Spelling is consistently inaccurate, grammar is poor, and register is too casual. Ideas are simplistic and repetitive.\",\n",
+      "  \"feedback\": \"Spelling is consistently phonetic but incorrect (e.g., \\\"Airtfishal,\\\" \\\"intelijense,\\\" \\\"compiters\\\"). Grammar is weak, with frequent subject\\u2013verb agreement errors and missing articles. Vocabulary is simplistic and repetitive; tone is conversational to the point of being unprofessional. Ideas are loosely connected and lack depth or evidence.\",\n",
       "  \"score\": 3\n",
       "}\n"
      ]
