--- a/conditional_workflow/2_review_sentiment.ipynb
+++ b/conditional_workflow/2_review_sentiment.ipynb
@@ -225,20 +225,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "1f6bb376",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'review': \"The submit button doesn't works\",\n",
+       "{'review': 'I’ve been trying to log in for over an hour now, and the app keeps freezing on the authentication screen. I even tried reinstalling it, but no luck. This kind of bug is unacceptable, especially when it affects basic functionality.',\n",
        " 'sentiment': 'negative',\n",
-       " 'diagnosis': {'issue_type': 'Bug', 'tone': 'frustrated', 'urgency': 'medium'},\n",
-       " 'response': 'Hi there,\\n\\nI’m really sorry this bug has been frustrating you—thank you for letting us know. I understand how disruptive it can feel when something that should “just work” suddenly doesn’t.\\n\\nGood news: we’ve reproduced the issue on our end and have already pushed a targeted fix. It’s currently rolling out to all users and should reach your account within the next 30 minutes. You won’t need to do anything—just refresh the page (or restart the app) once the update lands.\\n\\nIf you’re still seeing the problem after that, please reply here and I’ll personally dig in further. Either way, I’ll follow up with you tomorrow to make sure everything is running smoothly.\\n\\nThanks again for your patience, and sorry for the hiccup.\\n\\nBest,  \\n[Your Name]  \\nCustomer Support'}"
+       " 'diagnosis': {'issue_type': 'Bug', 'tone': 'angry', 'urgency': 'high'},\n",
+       " 'response': 'Hi [User Name],\\n\\nI’m really sorry this bug hit you so hard—I can see how frustrating this must be, especially when you’re on a tight deadline. Thank you for flagging it as high-priority; that helped us jump on it immediately.\\n\\nHere’s what we’ve done so far:\\n• We’ve reproduced the issue on our end and confirmed the root cause (a regression in yesterday’s 2.3.1 release).  \\n• Our engineers have already pushed a hot-fix build (2.3.2) to the staging environment and are running final tests.  \\n• We expect it to be live within the next 30 minutes.\\n\\nWhat you can do right now:\\n1. Keep the app open—once 2.3.2 is released you’ll see an in-app update prompt.  \\n2. If you’re blocked and can’t wait, here’s a temporary workaround: [link to 3-step workaround].  \\n3. I’ll personally ping you the moment the patch is live so you can verify the fix.\\n\\nAgain, I’m sorry for the disruption. We’ll follow up with a full post-mortem and a credit on your next invoice for the inconvenience.\\n\\nI’m here and monitoring this thread—just reply if anything else comes up.\\n\\nThanks for your patience,  \\n[Your Name]  \\nSenior Support Engineer'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
